Visual Fix
Fixed float left project expanded icon overflowing its description container (caused alignment issues with image container).

--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -237,6 +237,8 @@
 }
 
 .projects-expanded-description-container {
+	border: 1px solid red;
+	display: inline-block;
 	max-width: 800px;
 	margin: auto;
 	text-align: left;
